New verions using the "blueprint" CSS templates.

--- a/DNCMstyle.css
+++ b/DNCMstyle.css
@@ -1,75 +1,6 @@
-body {
-   font-family: Arial, Helvetica, sans-serif;
-   font-size:18px;
-   background-color:red;
-}
-#wrapper {
-   width:900px;
-   margin:0px auto;
-   padding:11px;
-}
-#header {
-   border:3px solid #000;
-   height:80px;
-   padding:10px;
-   font-size:50pt;
-   font-weight:bold;
-   font-family: Arial, Helvetica, sans-serif;
-   background-color:#505050;
-   color:#ffffff;
-}
-#content {
-   padding-bottom:10px;
-}
-/* applies to all divs within the content div */
-#content div {
-   padding:10px;
-   border:1px solid #bbb;
-   float:left;
-   background-color:white;
-}
-#content-left {
-   width:100px;
-   height:500px;
-}
-#content-left p {
-   margin-top:0px;
-   margin-bottom:3px;
-}
-#content-main {
-   width:755px;
-   height:150px;
-}
-#content-box1, #content-box2, #content-box3 {
-   padding:10px;
-   border:1px solid #bbb;
-   position:absolute;
-   margin-top:172px;
-   height:140px;
-}
-#content-box1 {
-   margin-left:122px;
-   width:200px;
-}
-#content-box2 {
-   margin-left:444px;
-   width:200px;
-}
-#content-box3 {
-   margin-left:676px;
-   width:202px;
-}
-#footer {
-   float:left;
-   margin-bottom:10px;
-   padding:10px;
-   border:1px solid #bbb;
-   width:878px;
-   background-color:#505050;
-   color:#ffffff;
-}
-#bottom {
-   font-size:8pt;
-   clear:both;
-   text-align:center;
+p.sidebarLink {
+   text-indent:20px;
+   font-size:14pt;
+   margin:0;
+   margin-bottom:0px;
 }
