--- a/DNCMstyle.css
+++ b/DNCMstyle.css
@@ -1,6 +1,10 @@
-p.sidebarLink {
+p.sidebar {
    text-indent:20px;
    font-size:14pt;
    margin:0;
    margin-bottom:0px;
 }
+a.sidebar:link { color: black; text-decoration: none;}
+a.sidebar:active { color: black; text-decoration: none }
+a.sidebar:visited { color: black; text-decoration: none }
+a.sidebar:hover { color: white; background-color:#077c89; padding:3px; }
