--- a/www/DNCMstyle.css
+++ b/www/DNCMstyle.css
@@ -46,13 +46,30 @@ p.subLogo {
    padding-bottom:0px; 
    padding-top:0px;
 }
-#sidebarLinks {
+.inlineCompanyName {
+   font-family:"Trebuchet MS", Helvetica, sans-serif;
+   font-style:oblique;
+   font-weight:bold;
+}
+.normal {
+   font-family: Georgia, serif;
+   font-size: 14pt;
+   margin-top: 10px;
+   margin-bottom:2px;
+}
+.tight {
+   margin-top:2px;
+}
+.normal a:link { color: black; font-family:Arial, Helvetica, sans-serif; font-weight:bold; text-decoration: none; }
+.normal a:active { color: black; font-family:Arial, Helvetica, sans-serif; font-weight:bold; text-decoration: none; }
+.normal a:visited { color: black; font-family:Arial, Helvetica, sans-serif; font-weight:bold; text-decoration: none; }
+.normal a:hover { color: white; font-family:Arial, Helvetica, sans-serif; font-weight:bold; background-color:#077c89; text-decoration: none; }
+div.sidebarLinks {
    border-width:2px; 
    border-style:solid; 
    border-color:black; 
    padding-top:4px; 
-   padding-bottom:10px; 
-   margin-bottom:10px;
+   padding-bottom:10px;
 }
 p.sidebarLink {
    text-indent:15px;
@@ -79,6 +96,25 @@ div.product {
    background-color: white;
    font-size:12pt;
    margin-bottom: 0px;
+}
+div.contact {
+   background-color: white;
+   font-size:12pt;
+   margin-bottom: 5px;
+   padding-left:10px;
+   padding-bottom:20px;
+}
+p.contact {
+   margin:0 0 10px 60px;
+   line-height:1;
+}
+p.contactType {
+   font-weight:bold;
+   margin:5px 0 0 20px;
+}
+p.contactType span {
+   font-weight:normal;
+   margin-left:10px;
 }
 div.productHeading {
    margin-left:10px;
