--- a/www/DNCMstyle.css
+++ b/www/DNCMstyle.css
@@ -92,10 +92,14 @@ a.sidebar:hover { color: white; background-color:#077c89; padding-left:5px; padd
    margin-right:1em; 
    margin-left:1em;
 }
+div.home {
+   font-size:12pt;
+   margin-bottom: 20px;
+}
 div.product {
    background-color: white;
    font-size:12pt;
-   margin-bottom: 0px;
+   margin-bottom: 10px;
 }
 div.contact {
    background-color: white;
